# ESP32_Deluminator

./: .gitignore  README.md  esp32_sys_overview.md  gdb_cmds.txt  reorg_me.c  sdkconfig  sdkconfig.old
Attacks/: WPA2_Deauth.md
CAD/: Case.FCStd  Case.FCStd1
ESP32_Writeups/: rename_me.md
components/data_pkt_dumper/: data_pkt_dumper.c  data_pkt_dumper.h
components/eapol_logger/: eapol.c  eapol.h  eapol_logger.c  eapol_logger.h
components/mac_logger/: Kconfig  mac_logger.c  mac_logger.h
components/pkt_sniffer/: dot11.h  dot11_data.h  dot11_mgmt.h  pkt_sniffer.c  pkt_sniffer.h
components/repl_mux/: CMakeLists.txt  Kconfig  repl_mux.c  repl_mux.h
components/tcp_file_server/: tcp_file_server.c  tcp_file_server.h
esp32_build/: partitions_example.csv  sdkconfig  sdkconfig.old
esp32_build/components/HD44780/: HD44780.c  README.md
esp32_build/components/eapol_logger/: CMakeLists.txt  Kconfig  eapol_logger.c  eapol_logger.h
esp32_build/components/encoder/: encoder.c
esp32_build/components/mac_logger/: CMakeLists.txt  Kconfig  mac_logger.c  mac_logger.h
esp32_build/components/pkt_sniffer/: CMakeLists.txt  pkt_sniffer.c  pkt_sniffer.h
esp32_build/main/: CMakeLists.txt  HD44780.c  Kconfig.projbuild  conf.h  console_example_main.c  encoder.c  flash_man.c  flash_man.h  fs_apps.c  lcd.c  lcd.h  lcd_app_common.c  lcd_app_common.h  main.c  repl.c  repl.h  signal_sniffer.c  user_interface.c  user_interface.h  wifi.c  wifi.h  wpa2_key_attacks.c
main/: main.c
pkt_scripts/: pull_eapol.py
scripts/: pull_eapol.py  test.hccapx  test.pcap  words.txt
(+10 files in other folders)
