idf_component_register(SRCS   "main.c"
                              "user_interface.c"
                              "repl.c"
                              "flash_man.c"
                              "wifi.c"
                              "lcd.c"
                              "encoder.c"
                    INCLUDE_DIRS ".")
